@@ -213,8 +213,8 @@ Windows port
   A Win32 port is provided. In order to compile it, you will need to
   get and unpack glib-dev-????.zip and gtk+-dev-????.zip from
         http://www.gimp.org/~tml/gimp/win32/
-  Do not forget to get also extralibs-dev-????.zip, since you will
-  need some of the DLLs.
+  Do not forget to get also iconv-dev-????.zip and extralibs-dev-????.zip,
+  since you will need some of the DLLs.
 
   Edit config.make.nt, then, using Visual C++,
         nmake -f Makefile.nt
@@ -223,10 +223,10 @@ Windows port
         nmake -f Makefile.nt install
 
   Since the link is dynamic you will also need to have in your path:
-  gnu-intl.dll (extralibs), glib-1.3.dll, module-1.3.dll and
-  gthread-1.3.dll (glib), gdk-1.3.dll and gtk-1.3.dll (gtk+).
+  gnu-intl.dll (extralibs), iconv-1.3.dll (iconv), glib-1.3.dll and
+  gmodule-1.3.dll (glib), gdk-1.3.dll and gtk-1.3.dll (gtk+).
 
-  I checked with the 2000-02-02 version of these libraries.
+  I checked with the 2000-12-26 version of these libraries.
   Currently threads do not seem to work, but otherwise everything
   seems OK. In particular, you can run all examples, and build
   applications\unison as usual.
