@@ -1,6 +1,8 @@
+CAMLC=ocamlc
+CAMLOPT=ocamlopt
 LIBDIR=c:/Home/garrigue/ocaml/lib
-GTKCFLAGS=-I../glib -I../gtk+
+GTKCFLAGS=-I..\..\glib -I..\..\gtk+ -I..\..\gtk+\gdk
 GTKSRC=c:\Home\garrigue
-GTKLIBS=$(GTKSRC)/glib/gmodule-1.3.lib $(GTKSRC)/glib/glib-1.3.lib $(GTKSRC)/gtk+/gdk/gdk-1.3.lib $(GTKSRC)/gtk+/gtk/gtk-1.3.lib
+GTKLIBS=$(GTKSRC)/glib/gmodule/gmodule-1.3.lib $(GTKSRC)/glib/glib-1.3.lib $(GTKSRC)/gtk+/gdk/gdk-1.3.lib $(GTKSRC)/gtk+/gtk/gtk-1.3.lib
 USE_GL=0
 USE_CC=0
