@@ -2,8 +2,8 @@
 # Makefile for lablgtk.
 
 EXE = .exe
-CONFIG = ..\config.make
-TARGETS = varcc lablgtk$(EXE) lablgtk_t$(EXE) lablgtkrun$(EXE) $(CONFIG)
+CONFIG = ..\config.make.nt
+TARGETS = varcc lablgtk$(EXE) lablgtk_t$(EXE) lablgtkrun$(EXE)
 
 all: $(TARGETS)
 
@@ -41,7 +41,7 @@ CCOMPILER = $(CC) -c -I$(LIBDIR) $(CFLAGS)
 CCOMPILER = ocamlc -c -ccopt "$(CFLAGS)"
 !endif
 
-ifdef USE_GL
+!if $(USE_GL) == 1
 MLFLAGS += -I $(LABLGLDIR)
 MLLINK += lablgl.cma
 MLLIBS += lablgtkgl.cma
@@ -65,10 +65,10 @@ GLCOBJS = ml_gtkgl.obj
 	ocamlrun ./varcc $<
 
 # Targets
-GTKOBJS = ml_gtk.o ml_gtkbin.o ml_gtkbutton.o ml_gtkedit.o ml_gtklist.o \
-	ml_gtkmenu.o ml_gtkmisc.o ml_gtknew.o ml_gtkpack.o ml_gtkrange.o \
-	ml_gtktree.o
-COBJS = ml_gdk.o ml_glib.o wrappers.o $(GTKOBJS)
+GTKOBJS = ml_gtk.obj ml_gtkbin.obj ml_gtkbutton.obj ml_gtkedit.obj \
+        ml_gtklist.obj ml_gtkmenu.obj ml_gtkmisc.obj ml_gtknew.obj \
+        ml_gtkpack.obj ml_gtkrange.obj ml_gtktree.obj
+COBJS = ml_gdk.obj ml_glib.obj wrappers.obj $(GTKOBJS)
 MLOBJS = gaux.cmo gpointer.cmo glib.cmo gdk.cmo gdkEvent.cmo gdkKeysyms.cmo \
 	gtk.cmo gtkArgv.cmo gtkSignal.cmo \
 	gtkData.cmo gtkBase.cmo gtkPack.cmo gtkButton.cmo \
@@ -87,7 +87,7 @@ ALLOBJS = $(MLOBJS) $(GLMLOBJS) $(GNOMEMLOBJS) $(GLADEMLOBJS) $(THOBJS) \
 lablgtk$(EXE): $(CLIBS) $(MLLIBS) $(INITOBJS)
 	$(TOPLEVEL) -o $@ $(MLLINK) -I . $(MLLIBS) $(INITOBJS)
 
-lablgtk_t: $(CLIBS) $(MLLIBS) $(THOBJS) $(INITOBJS) $(THINITOBJS)
+lablgtk_t$(EXE): $(CLIBS) $(MLLIBS) $(THOBJS) $(INITOBJS) $(THINITOBJS)
 	$(TOPLEVEL) $(THFLAGS) -o $@ $(THLINK) $(MLLINK) \
 	   -I . $(MLLIBS) $(THOBJS) $(INITOBJS) $(THINITOBJS)
 
@@ -135,14 +135,11 @@ varcc: varcc.cmo
 clean:
 	rm -f *.cm* *.obj *.lib *_tags.[ch] $(TARGETS)
 
-config.make: config.make.nt
-	cp ../config.make.nt ../config.make
-
 depend .depend:
 	ocamldep *.ml *.mli > .depend
 
-ml_gtk.obj: gtk_tags.c gtk_tags.h ml_gtk.h ml_gdk.h wrappers.h
-ml_gdk.obj: gdk_tags.c gdk_tags.h ml_gdk.h wrappers.h
-ml_gtkgl.obj: gtkgl_tags.c gtkgl_tags.h ml_gtk.h ml_gdk.h wrappers.h
+ml_gtk.obj: gtk_tags.h ml_gtk.h ml_gdk.h wrappers.h
+ml_gdk.obj: gdk_tags.h ml_gdk.h wrappers.h
+ml_gtkgl.obj: gtkgl_tags.h ml_gtk.h ml_gdk.h wrappers.h
 
 !include .depend
