@@ -2,6 +2,8 @@ $Id$
 
 2001.02.15
   * changed directory structure: sources moved to src/
+  * updated Makefile.nt, made Win32 port work with gtk-1.3 of 2000-12-26
+  * remove gutter_size in GtkPack.Paned, since it disappeared in 1.3
 
 2001.02.13
   * relax some types in Gdk.Window, to allow all drawables
